# Sovereignty-Architecture-Elevator-Pitch-RedTeam

./: # 🔥 FLAMELANG ARTIFACT ANALYSIS CO.txt  .azure-pipelines.yml  .bashrc  .env  .env.ailab.example  .env.ailab.minimal.example  .env.empire  .env.example  .env.forensics.example  .env.genesis  .env.honeypot.example  .env.pid-ranco.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .progress-state.json  100-FAILURE-MODES.md  100-ways-quantum-chess-fails.md  100_LAYER_ASCENSION.md  100_LAYER_ASCENSION_REPORT.md  100_WAYS_WE_DIE.md  100_layer_config.yaml  200_LAWS_OF_SOVEREIGNTY.md  2025-11-25 — First Documented Case of Human–AI Cognitive Convergence.md  42821135.fxsnapshot  64_BIT_COMPUTING_OVERVIEW.md  ACADEMIC_MASTERY_ROADMAP.md  ACADEMIC_PROGRAM.md  ACADEMIC_RECOVERY_PROTOCOL.md  ACADEMY_MANIFESTO.md  ACCURACY_STRATEGIES.md  ACTIVATION_PROTOCOL.md  AGENTS1014_DEPLOYMENT.md  AGENT_AUTHORIZATION_MODEL.md  AGENT_DISPATCH_SUMMARY.md  AILAB_MINIMAL.md  AI_COLLABORATION_DISCLOSURE.md  AI_COLLABORATION_FRAMEWORK.md  AI_DOCUMENTATION_README.md  AI_LAB_GUIDE.md  (+1067 more)
.continue/: README.md  SETUP.md  continue_settings.json  install.ps1  install.sh
.devcontainer/: Dockerfile  codespace-bootstrap.sh  devcontainer.json  post-create.sh  setup.sh  sky-uplink.sh
.github/: BLOODLINE_CHEATSHEET.md  BRANCH_PROTECTION_SETUP.md  CODEOWNERS  GITHUB_APP.md  NGROK_EXAMPLE.md  NGROK_INTEGRATION_SUMMARY.md  NGROK_QUICKREF.md  ngrok-architecture.md
.strategickhaos/: README.md  component_registry.yml  discord_bot.py  project_status.yaml  requirements.txt  risk_hardening.yaml
.yamal/: codespace_endpoints_manifest.yaml
DailyBrain/: README.md
DailyBrain/cpp/: CMakeLists.txt
DailyBrain/cpp/src/: commute.cpp  commute.h  main.cpp  meetings.cpp  meetings.h  reviews.cpp  reviews.h  sleep.cpp  sleep.h
Silverado-19-25-54inch-Max-12.5-Ported-DualX12/: README.md
SovereignLLM_SafetyVault/: README.md
SovereignPRManager/: README.md  requirements.txt
StrategicKhaos_Compiler/: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STAGE_0_COMPLETE.md  repl.py
ValorYieldEngine/: deploy.sh
academy/: CURRICULUM_OVERVIEW.md  DIVIDEND_LOOP.md  FOUR_HOUSES.md  INTERNSHIP_PROGRAM.md  NFT_TIERS.md
agents/: README.md  promptsvc.py  worker.py
agents1014/: Dockerfile  README.md  __init__.py  agent_base.py  docker-compose.agents.yml  example_demo.py  main.py  mobius_eval.py  ollama_orchestrator.py  prometheus.yml  requirements.txt  run.sh  test_basic.py  voice_interface.py  websocket_bridge.py
ai-safety-framework/: DESIGN.md  README.md
alexa-skills/: README.md
alexander-methodology/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  QUICKSTART.md  README.md  join-swarm.sh
ancestral_lessons/: 2025-11-24 02:22:02 UTC-2af1871cd5ba4925.wisdom  2025-11-24 02:25:44 UTC-2af1871cd5ba4925.wisdom  2025-11-24 02:28:48 UTC-2af1871cd5ba4925.wisdom  20251124-021953-a2164694.wisdom  lesson_template.md
api/: __init__.py  connectors.py  requirements.txt  test_connectors.py
app/: ATHENA_TOOL_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  __init__.py  allowed_domains.yaml  browser.py  docker-compose.browser.yml  example_usage.py  test_browser.py
archive/: README.md
arsenal/: .gitignore  INTEGRATION_GUIDE.md  README.md  arsenal.txt  arsenal_metadata.jsonl  download_arsenal.sh
artifacts/: README.md  artifact_3560.yaml  artifact_3561.yaml  claude_meta_evolution_2025-11-21.md
audits/: AUDIT_FRAMEWORK.md
banking-integration/: DUAL_BANKING_ARCHITECTURE.md  Dockerfile  README.md  requirements.txt
benchmarks/: QUICK_START.md  README.md  TRADING_BOT_README.md  benchmark_config.yaml  benchmark_problems.yaml  dao_consensus_benchmark.py  enterprise_framework.yaml  generate_benchmark_figures.py  run_all_tests.py  run_trading_tests.py  sovereignty_benchmark.py  (+9 more)
benchmarks/harness/: Cargo.toml  README.md  runner.rs
discord-ops-bot/: Dockerfile  pyproject.toml
discord-ops-bot/discord_ops_bot/: __init__.py  ai_router.py  bot.py  logging_middleware.py  rbac.py
discord-ops-bot/discord_ops_bot/commands/: __init__.py  deploy.py  logs.py  scale.py  status.py
domc/: .gitignore  Cargo.toml  Dockerfile  README.md
domc/src/: main.rs
event-gateway/: Dockerfile  pyproject.toml
event-gateway/event_gateway/: __init__.py  alertmanager_endpoint.py  discord_notifier.py  github_webhook.py  hmac_verifier.py  main.py
flamelang/benchmarks/: CMakeLists.txt  Cargo.toml  cpp_benchmark.cpp  rust_benchmark.rs
gitriders/: .gitignore  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt
gitriders/.github/workflows/: ci.yml
gitriders/docs/: consent_strings.md
gitriders/sovereign_export/: __init__.py  audit.py  cli.py  config.py  encrypt.py  manifest.py  redaction.py  ui.py
gitriders/sovereign_export/connectors/: __init__.py  anthropic.py  google_takeout.py  openai.py  perplexity.py  xai_grok.py
gitriders/tests/: __init__.py  test_connectors.py  test_encryption.py  test_manifest.py  test_redaction.py
gitriders/verifiers/: audit_verifier.py  decrypt_tool.py  manifest_verifier.py
quantum_splicer/: Cargo.toml  README.md
quantum_splicer/src/: api.rs  departments.rs  lib.rs  main.rs  splicer.rs
scaffolding/obsidian-vault/50_Templates/: docker-compose.yml  github-actions-ci.yml  pyproject.toml
src/solvern/: CMakeLists.txt  Makefile  README.md  example_entropy.txt  primordial_vectors.hpp  solvern.cpp
swarmgate/: .env.example  Cargo.toml  README.md  config.yaml  hardhat.config.js  package-lock.json  package.json  status.yaml
swarmgate/contracts/: CharitySplitter.sol  MerkleDistributor.sol
swarmgate/scripts/: deploy.js
swarmgate/src/: main.rs
swarmgate/test/: CharitySplitter.test.js  SwarmGate.test.js
swarmgate_rebalancer/: README.md  __init__.py  brokers.py  cli.py  config.py  flow.yaml  grok_models.py  math_validator.py  pyproject.toml  treasury.py
swarmgate_rebalancer/examples/: grok_plan.json  snapshot.json
swarmgate_rebalancer/tests/: __init__.py  test_config.py  test_grok_models.py  test_math_validator.py
(+2946 files in other folders)
