[package]
name = "domc"
version = "1.0.0"
edition = "2021"
authors = ["Strategickhaos DAO LLC"]
description = "Dom Compiler - Translates Dom-speak into executable reality"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "domc"
path = "src/main.rs"
