[package]
name = "domc"
version = "1.0.0"
edition = "2021"
authors = ["Strategickhaos DAO LLC"]
description = "Dom Compiler - Translates Dom-speak into executable reality"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shlex = "1.3"

[[bin]]
name = "domc"
path = "src/main.rs"
