[package]
name = "quantum_splicer"
version = "0.1.0"
edition = "2021"
description = "Department-agnostic game/trading/AI breeding engine with revenue routing"
license = "MIT"

[lib]
name = "quantum_splicer"
path = "src/lib.rs"

[[bin]]
name = "quantum_splicer"
path = "src/main.rs"

[[bin]]
name = "quantum_splicer_api"
path = "src/bin/api.rs"
required-features = ["api"]

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"], optional = true }

[features]
default = []
api = ["axum", "tokio"]
