[package]
name = "quantum_splicer"
version = "0.1.0"
edition = "2024"
description = "Quantum Entanglement Black Hole DNA Code Block Splicer - Genesis: Increment 3449"
authors = ["Strategickhaos"]

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
