[package]
name = "flamelang-benchmark-harness"
version = "0.1.0"
edition = "2021"
authors = ["Domenic Garza <dom@strategickhaos.io>"]
description = "FlameLang Statistical Operations Benchmark Suite - Test Harness"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
