[package]
name = "flamelang_benchmarks"
version = "1.0.0"
edition = "2021"
authors = ["Strategickhaos DAO LLC"]
description = "FlameLang pattern matching benchmarks in Rust"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rust_benchmark"
harness = false
path = "rust_benchmark.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
